<resources>
    <string name="app_name">Currex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  Tentang Currex  -->
    <string name="or">or</string>
    <string name="about_us">Currex merupakan aplikasi yang menyediakan informasi tentang exchange rates dari suatu currency, baik itu cryptocurrency maupun nation currency.</string>
    <string name="about_api_title">About the API</string>
    <string name="about_api">If you or your company use this project or like what we doing, please consider backing us so we can continue maintaining and evolving this project.</string>
    <string name="exchangerate_host">exchangerate.host</string>
    <string name="support_exchangerate_host">support exchangerate.host</string>
    <string name="copyright_text">Made with ❤️ by Judah</string>

    <!--  Home fragment  -->
    <string name="greeting_user">Halo,</string>
    <string name="bagaimana_kabarmu">Bagaimana kabarmu?</string>
    <string name="kamu_mau_ngapain_hari_ini">Kamu mau ngapain hari ini?</string>
    <string name="foreign_exchange">Foreign Exchange</string>
    <string name="konversi_mata_uang">Konversi Mata Uang</string>

    <!--  Fragments  -->
    <string name="market_hari_ini">Market hari ini</string>
    <string name="today_date">16 Juni 2022</string>
    <string name="pairs">Pairs</string>
    <string name="code_symbol">Code/Symbol</string>
    <string name="rate">Rate</string>
    <string name="base_currency">Base : USD</string>

    <!--  Convert currency  -->
    <string name="from_tf">Dari</string>
    <string name="to_tf">Ke</string>
    <string name="amount_tf">Jumlah</string>
    <string name="latest_rates">Harga terakhir</string>
    <string name="comparation_rates">1 USD = 14,450 IDR</string>
    <string name="konversi_btn">Konversi</string>

    <!--  Notification channel  -->
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data rate otomatis</string>

    <!--  Notification  -->
    <string name="notif_title">Ada data rate baru!</string>
    <string name="notif_text">Ayo cek sekarang keburu berubah lagi harganya..</string>
    <string name="result_convert">%1$s %2$.2f</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="logo">Logo</string>
    <string name="history">History</string>
    <string name="error_text">Datanya engga ada!</string>
</resources>