<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:paddingHorizontal="22dp"
    android:paddingVertical="24dp"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/greeting_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting_user"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bagaimana_kabarmu"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/greeting_text"
        app:layout_constraintTop_toBottomOf="@+id/greeting_text" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/kamu_mau_ngapain_hari_ini"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/foreign_exchange_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="14dp"
            android:backgroundTint="@color/card"
            android:text="@string/foreign_exchange" />

        <Button
            android:id="@+id/konversi_mata_uang_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/card"
            android:text="@string/konversi_mata_uang" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>